--- a/Quiz-App/package.json
+++ b/Quiz-App/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "framer-motion": "^12.0.6",
+    "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
